# nano-llm-posttraining

./: .gitignore  LICENSE  pyproject.toml  scratch_aha_candidates.py  scratch_sharpen.py  scripts_validate_answers.py  uv_.toml
design/: plan.md
scripts/: validate_answers.py
src/: __init__.py  _bench_grpo.py  countdown_rewards.py  data_loader.py  dpo.py  grpo.py  grpo_cot.py  grpo_cot_checker.py  grpo_cot_checker_aha.py  grpo_countdown.py  grpo_countdown_checker.py  gsm8k_rewards.py  identity_sft.py  ifeval_claude_answers.json  ifeval_rewards.py  kl_analysis.py  model_loader.py  offdist_matched.py  ppl_eval.py  retention_eval.py  rft.py  sft.py
src/post-plot/: countdown_curve.py  ppl_forgetting.py  razor_pareto.py
