[project]
name = "llm-posttraining"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "lm-eval>=0.4.12",
    "matplotlib>=3.11.1",
    "peft>=0.19.1",
    "rich>=15.0.0",
    "torch",
    # Pin to 4.x: transformers 5 tightened config validation and rejects models
    # with non-standard head_dim (e.g. anrilombard/mzansilm-125m, head_dim=56).
    "transformers>=4.52.4,<5",
    "trl>=1.8.0",
]

# vLLM is optional: it speeds up GRPO rollouts on a rented GPU, but it drags in
# torchvision and heavy CUDA deps that break the text-only stack on bleeding-edge
# Python (e.g. 3.14). Install only where needed:  uv sync --extra vllm
# torchvision/torchaudio are listed EXPLICITLY (not just left to vllm's transitive
# pull) so the cu128 [tool.uv.sources] pin below actually applies -- uv does not
# reliably redirect a transitive-only dep to an explicit index.
[project.optional-dependencies]
# vllm 0.23+ ships only CUDA-13 wheels (needs libcudart.so.13); this project stays
# on cu128 so it runs on both the local (CUDA 12.8) and server (13.0, backward-compat)
# drivers. 0.23 is the first CUDA-13 wheel; cap below it and floor at 0.16 (the
# lowest vLLM the installed trl supports) so the pin is both cu128 and trl-compatible.
vllm = ["vllm>=0.16,<0.23", "torchvision", "torchaudio"]

# Pull torch from PyTorch's official CUDA 12.8 index (RTX 5060 Ti / Blackwell needs cu128).
# explicit=true means this index is used ONLY for packages explicitly bound to it
# in [tool.uv.sources] below; everything else (transformers, etc.) still comes from PyPI.
#
# torchvision/torchaudio MUST come from the same cu128 index as torch. They are pulled
# in transitively by vllm (--extra vllm); if they come from PyPI instead, the build's
# C++ ops are compiled against a different torch ABI and import dies with
# "operator torchvision::nms does not exist". Pinning them here forces the matching build.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
# Some vLLM deps (e.g. xgrammar 0.2.4) publish releases with no x86_64-linux wheel.
# Requiring this platform forces uv to backtrack to a dependency set that actually
# installs on the local WSL/Ubuntu x86_64 box, not just aarch64/macos.
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
